--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ color: #ff4747;
 .site-title-section {
   text-align: center;
   padding: 12px 10px;
-  background: linear-gradient(135deg, #ffcc00, #ff4747);
+  background: #000;
   box-shadow: 0 4px 6px rgba(0,0,0,0.5);
+  border-bottom: 1px solid #ff5e00;
 }
 
 .site-title-section h1 {
@@ -36,6 +37,7 @@ header {
   padding: 8px 20px;
   display: flex;
   justify-content: center;
+  border-bottom: 1px solid #ff5e00;
 }
 
 /* Default header */
@@ -537,6 +539,7 @@ section h2 {
     font-size: 13px;
   }
 }
+
 
 
 
